# rgb2cmyk

./: .gitignore  README.md  gui.fbp  meson.build  nativefile.ini  rgb2cmyk.cbp
resources/: rgb2cmyk.desktop
src/: app.cpp  app.h  gui.cpp  gui.h  main.cpp  main.h
